Cambio de timepick a datepick

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -61,6 +61,10 @@
         interval: 6000
       });
   });
+
+  $(document).ready(function(){
+    $('.datepicker').datepicker();
+  });
        
       </script>
 
